--- a/src/ExternalApiExamples/ExternalApiExamples.csproj
+++ b/src/ExternalApiExamples/ExternalApiExamples.csproj
@@ -7,6 +7,11 @@
 
     <ItemGroup>
       <PackageReference Include="ConsoleTables" Version="2.3.0" />
+      <PackageReference Include="Kmd.Logic.Identity.Authorization" Version="2.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.1" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0" />
       <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.21" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
