Added apikey field

--- a/src/ExternalApiExamples/appsettings.json
+++ b/src/ExternalApiExamples/appsettings.json
@@ -4,5 +4,6 @@
     "ClientId": "",
     "ClientSecret": ""
   },
-  "StudicaExternalApiBaseAddress": ""
+  "StudicaExternalApiBaseAddress": "",
+  "StudicaExternalApiKey": ""
 }
