--- a/src/ExternalApiExamples/ExternalApiExamples.csproj
+++ b/src/ExternalApiExamples/ExternalApiExamples.csproj
@@ -17,4 +17,10 @@
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
