Added school code parameters to appsettings

--- a/src/ExternalApiExamples/appsettings.json
+++ b/src/ExternalApiExamples/appsettings.json
@@ -4,5 +4,6 @@
     "ClientId": "",
     "ClientSecret": ""
   },
-  "StudicaExternalApiKey": ""
+  "StudicaExternalApiKey": "",
+  "SchoolCode": ""
 }
