--- a/src/ExternalApiExamples/appsettings.json
+++ b/src/ExternalApiExamples/appsettings.json
@@ -5,5 +5,8 @@
     "ClientSecret": ""
   },
   "StudicaExternalApiKey": "",
-  "SchoolCode": ""
+  "SchoolCode": "",
+  "SchoolAdministrationBaseUri": "",
+  "ProgrammesBaseUri": "",
+  "StudentsBaseUri": ""
 }
