--- a/src/ExternalApiExamples/ExternalApiExamples.csproj
+++ b/src/ExternalApiExamples/ExternalApiExamples.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <UserSecretsId>2729f8d6-857d-41d4-8769-355a455831b3</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
@@ -20,6 +21,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.1" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0" />
       <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.21" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
