added localtest token provider

--- a/src/ExternalApiExamples/appsettings.json
+++ b/src/ExternalApiExamples/appsettings.json
@@ -8,5 +8,6 @@
   "SchoolCode": "",
   "SchoolAdministrationBaseUri": "",
   "ProgrammesBaseUri": "",
-  "StudentsBaseUri": ""
+  "StudentsBaseUri": "",
+  "LocalTestJwtToken": ""
 }
