Updated for Studica v2.40 - Added sample for new Internship.Dk service

--- a/src/ExternalApiExamples/appsettings.json
+++ b/src/ExternalApiExamples/appsettings.json
@@ -6,6 +6,7 @@
   },
   "StudicaExternalApiKey": "",
   "SchoolCode": "",
+  "InternshipDkBaseUri": "https://gateway.kmdlogic.io/studica/internship-dk/v1",
   "SchoolAdministrationBaseUri": "https://gateway.kmdlogic.io/studica/school-administration/v1",
   "SchoolInternshipsBaseUri": "https://gateway.kmdlogic.io/studica/school-internships/v1",
   "ProgrammesBaseUri": "https://gateway.kmdlogic.io/studica/programmes/v1",
