Updated for Studica v2.51 Added examples for Handin statistics

--- a/src/ExternalApiExamples/appsettings.json
+++ b/src/ExternalApiExamples/appsettings.json
@@ -10,6 +10,7 @@
   "SchoolAdministrationBaseUri": "https://gateway.kmdlogic.io/studica/school-administration/v1",
   "SchoolInternshipsBaseUri": "https://gateway.kmdlogic.io/studica/school-internships/v1",
   "ProgrammesBaseUri": "https://gateway.kmdlogic.io/studica/programmes/v1",
+  "StatisticsBaseUri": "https://gateway.kmdlogic.io/studica/statistics/v1",
   "StudentsBaseUri": "https://gateway.kmdlogic.io/studica/students/v1",
   "LocalTestJwtToken": ""
 }
