appsettings.json now points to new Studica APIM

--- a/src/ExternalApiExamples/appsettings.json
+++ b/src/ExternalApiExamples/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ApiKeyName": "Logic-Api-Key",
+  "ApiKeyName": "Ocp-Apim-Subscription-Key",
   "TokenProvider": {
     "AuthorizationScope": "",
     "ClientId": "",
@@ -7,11 +7,11 @@
   },
   "StudicaExternalApiKey": "",
   "SchoolCode": "",
-  "InternshipDkBaseUri": "https://gateway.kmdlogic.io/studica/internship-dk/v1",
-  "SchoolAdministrationBaseUri": "https://gateway.kmdlogic.io/studica/school-administration/v1",
-  "SchoolInternshipsBaseUri": "https://gateway.kmdlogic.io/studica/school-internships/v1",
-  "ProgrammesBaseUri": "https://gateway.kmdlogic.io/studica/programmes/v1",
-  "StatisticsBaseUri": "https://gateway.kmdlogic.io/studica/statistics/v1",
-  "StudentsBaseUri": "https://gateway.kmdlogic.io/studica/students/v1",
+  "InternshipDkBaseUri": "https://api.studica.dk/demo/internship-dk/v1",
+  "SchoolAdministrationBaseUri": "https://api.studica.dk/demo/school-administration/v1",
+  "SchoolInternshipsBaseUri": "https://api.studica.dk/demo/school-internships/v1",
+  "ProgrammesBaseUri": "https://api.studica.dk/demo/programmes/v1",
+  "StudentsBaseUri": "https://api.studica.dk/demo/students/v1",
+  "StatisticsBaseUri": "https://api.studica.dk/demo/statistics/v1",
   "LocalTestJwtToken": ""
 }
